--- a/app/checkbox/page.mdx
+++ b/app/checkbox/page.mdx
@@ -5,3 +5,15 @@ import * as Demo from './Demo'
 <Demo.DemoGroupCheckbox/>
 
 <Demo.DemoNestedCheckbox/>
+
+
+
+## Dark mode
+
+<div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
+<Demo.DemoBasicCheckbox/>
+
+<Demo.DemoGroupCheckbox/>
+
+<Demo.DemoNestedCheckbox/>
+</div>
