--- a/app/radio/page.mdx
+++ b/app/radio/page.mdx
@@ -11,3 +11,19 @@ import * as Demo from './Demo'
 
 ## Generate Group radio with array
 <Demo.DemoRadioItems/>
+
+## Dark mode
+
+<div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
+## Basic radio
+<Demo.DemoBasicRadio/>
+
+## Group radio
+<Demo.DemoGroupRadio/>
+
+## Controlled Group radio
+<Demo.DemoControlledRadio/>
+
+## Generate Group radio with array
+<Demo.DemoRadioItems/>
+</div>
