fix (radio): fix radio icon, fix radio icon to working with the "name" attribute

--- a/app/radio/page.mdx
+++ b/app/radio/page.mdx
@@ -19,11 +19,5 @@ import * as Demo from './Demo'
 <Demo.DemoBasicRadio/>
 
 ## Group radio
-<Demo.DemoGroupRadio/>
-
-## Controlled Group radio
-<Demo.DemoControlledRadio/>
-
-## Generate Group radio with array
-<Demo.DemoRadioItems/>
+<Demo.DemoGroupRadio  type="dark"/>
 </div>
