update (menu): intergrate tokens

--- a/app/menu/page.mdx
+++ b/app/menu/page.mdx
@@ -11,3 +11,20 @@ import * as Demo from "./Demo"
 ## Group
 
 <Demo.DemoMenuGroup/>
+
+## Dark mode
+
+<div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
+
+## Basic
+
+<Demo.DemoBasicMenu usePortal={false} flag="dark"/>
+
+## Scroll
+
+<Demo.DemoScrollableMenu usePortal={false} flag="dark"/>
+
+## Group
+
+<Demo.DemoMenuGroup usePortal={false} flag="dark"/>
+</div>
