--- a/app/tabs/page.mdx
+++ b/app/tabs/page.mdx
@@ -1,5 +1,24 @@
-import {DemoTabs} from "./Demo"
+import {DemoTabs, DemoAccentTabs} from "./Demo"
 
 ## Basic
 <DemoTabs/>
+<DemoAccentTabs/>
 
+
+
+## Alternative
+
+<div className="bg-gray-25 p-4 rounded-md flex flex-col gap-4">
+## Basic
+<DemoTabs/>
+<DemoAccentTabs/>
+</div>
+
+
+## Dark mode
+
+<div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
+## Basic
+<DemoTabs/>
+<DemoAccentTabs/>
+</div>
