--- a/app/tabs/page.mdx
+++ b/app/tabs/page.mdx
@@ -10,8 +10,8 @@ import {DemoTabs, DemoAccentTabs} from "./Demo"
 
 <div className="bg-gray-25 p-4 rounded-md flex flex-col gap-4">
 ## Basic
-<DemoTabs/>
-<DemoAccentTabs/>
+<DemoTabs theme="alternative"/>
+<DemoAccentTabs theme="alternative"/>
 </div>
 
 
