--- a/app/tabs/page.mdx
+++ b/app/tabs/page.mdx
@@ -1,10 +1,9 @@
-import {DemoTabs, DemoAccentTabs} from "./Demo"
+import {DemoTabs, DemoAccentTabs, DemoTabsWithChildren} from "./Demo"
 
 ## Basic
+<DemoTabsWithChildren/>
 <DemoTabs/>
 <DemoAccentTabs/>
-
-
 
 ## Alternative
 
