--- a/app/badge/page.mdx
+++ b/app/badge/page.mdx
@@ -1,18 +1,18 @@
-import * as BadgeDemo from "./Demo"
+import {DemoOutlinedBadge, DemoGlassBadge, DemoSolidBadge, DemoDotBadge} from "./Demo"
 
 ## Outlined (default) 
-<BadgeDemo.DemoOutlinedBadge/>
+<DemoOutlinedBadge/>
 
 
 ## Glass
-<BadgeDemo.DemoGlassBadge/>
+<DemoGlassBadge/>
 
 
 ## Solid
-<BadgeDemo.DemoSolidBadge/>
+<DemoSolidBadge/>
 
 ## Dot
-<BadgeDemo.DemoDotBadge/>
+<DemoDotBadge/>
 
 {/* /////////////////////////////////////////////////////////////////////////////////////// */}
 
@@ -20,16 +20,16 @@ import * as BadgeDemo from "./Demo"
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Outlined (default) 
-<BadgeDemo.DemoOutlinedBadge/>
+<DemoOutlinedBadge/>
 
 
 ## Glass
-<BadgeDemo.DemoGlassBadge/>
+<DemoGlassBadge/>
 
 
 ## Solid
-<BadgeDemo.DemoSolidBadge/>
+<DemoSolidBadge/>
 
 ## Dot
-<BadgeDemo.DemoDotBadge/>
+<DemoDotBadge/>
 </div>
