--- a/app/popover/page.mdx
+++ b/app/popover/page.mdx
@@ -1,9 +1,9 @@
-import * as BadgeDemo from "./Demo"
+
 
 ## Outline (default) 
-<BadgeDemo.DemoOutlinedBadge/>
+{/* <BadgeDemo.DemoOutlinedBadge/> */}
 
 
 ## Glass
-<BadgeDemo.DemoGlassBadge/>
+{/* <BadgeDemo.DemoGlassBadge/> */}
 
