--- a/app/toast/page.mdx
+++ b/app/toast/page.mdx
@@ -2,7 +2,7 @@ import { DemoInfoToast, DemoSuccessToast, DemoWarningToast, DemoDangerToast, Dem
 import {ToastContainer} from '@libComponents/Toast';
 
 {/* add container in your page you want to use toast */}
-<ToastContainer/> 
+<ToastContainer max={3} /> 
 
 ## Types
 <DemoInfoToast/>
