feat (inline-link)

--- a/app/inline-link/page.mdx
+++ b/app/inline-link/page.mdx
@@ -7,6 +7,9 @@ import * as Demo from "./Demo"
 ## Inline Link Size
 <Demo.DemoSizeInlineLink/>
 
+## Inline Link Icon
+<Demo.DemoIconInlineLink/>
+
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Inline Link
@@ -14,4 +17,8 @@ import * as Demo from "./Demo"
 
 ## Inline Link Size
 <Demo.DemoSizeInlineLink/>
+
+
+## Inline Link Icon
+<Demo.DemoIconInlineLink/>
 </div>
