--- a/app/tooltip/page.mdx
+++ b/app/tooltip/page.mdx
@@ -1,9 +1,10 @@
+import * as TooltipDemo from "./Demo"
 
 
 ## Outline (default) 
-{/* <BadgeDemo.DemoOutlinedBadge/> */}
+<TooltipDemo.DemoOutlinedTooltip/>
 
 
 ## Glass
-{/* <BadgeDemo.DemoGlassBadge/> */}
+<TooltipDemo.DemoOutlinedTooltip/>
 
