feat (tooltip): add all feature

--- a/app/tooltip/page.mdx
+++ b/app/tooltip/page.mdx
@@ -1,10 +1,24 @@
 import * as TooltipDemo from "./Demo"
 
 
-## Outline (default) 
-<TooltipDemo.DemoOutlinedTooltip/>
+## Hover and Focus
+<TooltipDemo.DemoOutlinedTooltip />
+
+## SafePolygon
+<TooltipDemo.DemoOutlinedTooltip isSafePolygon/>
 
 
-## Glass
-<TooltipDemo.DemoOutlinedTooltip/>
+## Toggle and Delay
+<TooltipDemo.DemoOutlinedTooltip delay={1000} isToggle/>
 
+<div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
+## Hover and Focus
+<TooltipDemo.DemoOutlinedTooltip />
+
+## SafePolygon
+<TooltipDemo.DemoOutlinedTooltip isSafePolygon/>
+
+
+## Toggle and Delay
+<TooltipDemo.DemoOutlinedTooltip delay={1000} isToggle/>
+</div>
