feat (tooltip): - add full features - add useTouch for optimize UX on mobile

--- a/app/tooltip/page.mdx
+++ b/app/tooltip/page.mdx
@@ -9,7 +9,7 @@ import * as TooltipDemo from "./Demo"
 
 
 ## Toggle and Delay
-<TooltipDemo.DemoOutlinedTooltip delay={1000} isToggle/>
+<TooltipDemo.DemoOutlinedTooltip delay={1000} isToggle touchDelay={1000}/>
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Hover and Focus
