--- a/app/switch/page.mdx
+++ b/app/switch/page.mdx
@@ -6,3 +6,13 @@ import * as Demo from "./Demo"
 ## With Icon
 <Demo.DemoIconSwitch/>
 
+
+## Dark mode
+
+<div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
+## Basic
+<Demo.DemoBasicSwitch/>
+
+## With Icon
+<Demo.DemoIconSwitch/>
+</div>
