--- a/app/switch/page.mdx
+++ b/app/switch/page.mdx
@@ -6,6 +6,9 @@ import * as Demo from "./Demo"
 ## With Icon
 <Demo.DemoIconSwitch/>
 
+## Disabled
+<Demo.DemoIconSwitch disabled/>
+
 
 ## Dark mode
 
@@ -15,4 +18,7 @@ import * as Demo from "./Demo"
 
 ## With Icon
 <Demo.DemoIconSwitch/>
+
+## Disabled
+<Demo.DemoIconSwitch disabled/>
 </div>
