fix demo tooltip: add dark data scheme for dark mode

--- a/app/tooltip/page.mdx
+++ b/app/tooltip/page.mdx
@@ -13,12 +13,12 @@ import * as TooltipDemo from "./Demo"
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Hover and Focus
-<TooltipDemo.DemoOutlinedTooltip />
+<TooltipDemo.DemoOutlinedTooltip data-scheme="dark"/>
 
 ## SafePolygon
-<TooltipDemo.DemoOutlinedTooltip isSafePolygon/>
+<TooltipDemo.DemoOutlinedTooltip data-scheme="dark" isSafePolygon/>
 
 
 ## Toggle and Delay
-<TooltipDemo.DemoOutlinedTooltip delay={1000} isToggle/>
+<TooltipDemo.DemoOutlinedTooltip data-scheme="dark" delay={1000} isToggle/>
 </div>
