doc: change theme

--- a/app/accordion/page.mdx
+++ b/app/accordion/page.mdx
@@ -17,6 +17,8 @@ import * as Demo from "./Demo"
 ## Controlled Accordion
 <Demo.DemoControlled/>
 
+
+{/* 
 ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
@@ -36,4 +38,4 @@ import * as Demo from "./Demo"
 
 ## Controlled Accordion
 <Demo.DemoControlled/>
-</div> 
+</div>  */}
