--- a/app/badge/page.mdx
+++ b/app/badge/page.mdx
@@ -16,7 +16,7 @@ import {DemoOutlinedBadge, DemoGlassBadge, DemoSolidBadge, DemoDotBadge} from ".
 
 {/* /////////////////////////////////////////////////////////////////////////////////////// */}
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Outlined (default) 
@@ -32,4 +32,4 @@ import {DemoOutlinedBadge, DemoGlassBadge, DemoSolidBadge, DemoDotBadge} from ".
 
 ## Dot
 <DemoDotBadge/>
-</div>
+</div> */}
