--- a/app/breadcrumb/page.mdx
+++ b/app/breadcrumb/page.mdx
@@ -26,7 +26,7 @@ import {DemoBreadcrumbBasic, DemoBreadcrumbList} from "./Demo"
 
 
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Basic
@@ -52,4 +52,4 @@ import {DemoBreadcrumbBasic, DemoBreadcrumbList} from "./Demo"
 <DemoBreadcrumbList limit={3} color='neutral' underline='always' menuProps={{'data-scheme': 'dark', menuItemsLimit: 3}}/>
 <DemoBreadcrumbList color='neutral' underline='always'/>
 
-</div>
+</div> */}
