--- a/app/button/page.mdx
+++ b/app/button/page.mdx
@@ -15,7 +15,7 @@ import * as Demo from "./Demo"
 
 {/* /////////////////////////////////////////////////////////////////////////////////////// */}
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Colors
@@ -29,5 +29,5 @@ import * as Demo from "./Demo"
 
 ## Others
 <Demo.DemoStatesButton/>
-</div>
+</div> */}
 
