--- a/app/chip/page.mdx
+++ b/app/chip/page.mdx
@@ -16,7 +16,7 @@ import * as Demo from './Demo'
 
 {/* /////////////////////////////////////////////////////////////////////////////////////// */}
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Type Toggle
@@ -31,5 +31,5 @@ import * as Demo from './Demo'
 ## Dropdown menu (Dropdown)
 <Demo.DemoSelectMenu/>
 <Demo.DemoSelectMenu kind="glass"/>
-</div>
+</div> */}
 
