--- a/app/corner-indicator/page.mdx
+++ b/app/corner-indicator/page.mdx
@@ -12,7 +12,7 @@ import * as Demo from "./Demo"
 
 <Demo.DemoCornerIndicatorInset/>
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Basic corner indicator
@@ -26,4 +26,4 @@ import * as Demo from "./Demo"
 ## Inset
 
 <Demo.DemoCornerIndicatorInset/>
-</div>
+</div> */}
