--- a/app/dot/page.mdx
+++ b/app/dot/page.mdx
@@ -10,7 +10,7 @@ import * as Demo from "./demo"
 
 {/* /////////////////////////////////////////////////////////////////////////////////////// */}
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Sizes
@@ -20,4 +20,4 @@ import * as Demo from "./demo"
 ## Pulse
 
 <Demo.ColorDotDemo pulse/>
-</div>
+</div> */}
