--- a/app/inline-link/page.mdx
+++ b/app/inline-link/page.mdx
@@ -11,7 +11,7 @@ import * as Demo from "./Demo"
 <Demo.DemoIconInlineLink/>
 
 
-<div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
+{/* <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Inline Link
 <Demo.DemoKindInlineLink/>
 
@@ -21,4 +21,4 @@ import * as Demo from "./Demo"
 
 ## Inline Link Icon
 <Demo.DemoIconInlineLink/>
-</div>
+</div> */}
