--- a/app/menu/page.mdx
+++ b/app/menu/page.mdx
@@ -12,7 +12,7 @@ import * as Demo from "./Demo"
 
 <Demo.DemoMenuGroup/>
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 
@@ -27,4 +27,4 @@ import * as Demo from "./Demo"
 ## Group
 
 <Demo.DemoMenuGroup usePortal={false} flag="dark"/>
-</div>
+</div> */}
