--- a/app/number-input/page.mdx
+++ b/app/number-input/page.mdx
@@ -75,7 +75,7 @@ import { CircleDollarSign } from 'lucide-react';
 
 ## Alternative
 
-<div className="bg-gray-25 p-4 rounded-md flex flex-col gap-4">
+<div className="bg-[var(--background-alternative)] p-4 rounded-md flex flex-col gap-4">
 
 ## Basic
 
@@ -128,7 +128,7 @@ import { CircleDollarSign } from 'lucide-react';
 
 {/* /////////////////////////////////////////////////////////////////////////////////////// */}
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Basic
@@ -185,4 +185,4 @@ import { CircleDollarSign } from 'lucide-react';
 <DemoNumberInput isClearable readOnly floatingLabel='Floating Label' placeholder='Placeholder' value={1000} />
 <DemoNumberInput isClearable readOnly floatingLabel='Floating Label' placeholder='Placeholder' leftIcon={<CircleDollarSign />}/>
 
-</div>
+</div> */}
