--- a/app/password-input/page.mdx
+++ b/app/password-input/page.mdx
@@ -64,7 +64,7 @@ import { KeyRound } from 'lucide-react';
 
 ## Alternative
 
-<div className="bg-gray-25 p-4 rounded-md flex flex-col gap-4">
+<div className="bg-[var(--background-alternative)] p-4 rounded-md flex flex-col gap-4">
 
 
 ## Basic
@@ -117,7 +117,7 @@ import { KeyRound } from 'lucide-react';
 
 {/* /////////////////////////////////////////////////////////////////////////////////////// */}
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 
@@ -164,4 +164,4 @@ import { KeyRound } from 'lucide-react';
 <DemoBasicPasswordInput isClearable readOnly floatingLabel='Floating Label' placeholder='Placeholder' value='Password' />
 <DemoBasicPasswordInput isClearable readOnly floatingLabel='Floating Label' placeholder='Placeholder' leftIcon={<KeyRound />}/>
 
-</div>
+</div> */}
