--- a/app/radio/page.mdx
+++ b/app/radio/page.mdx
@@ -12,7 +12,7 @@ import * as Demo from './Demo'
 ## Generate Group radio with array
 <Demo.DemoRadioItems/>
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Basic radio
@@ -20,4 +20,4 @@ import * as Demo from './Demo'
 
 ## Group radio
 <Demo.DemoGroupRadio  type="dark"/>
-</div>
+</div> */}
