--- a/app/select/page.mdx
+++ b/app/select/page.mdx
@@ -13,7 +13,7 @@ import * as Demo from "./Demo"
 <Demo.DemoCustomMutipleSelect/>
 
 
-## Dark mode
+{/* ## Dark mode
 
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
@@ -27,6 +27,6 @@ import * as Demo from "./Demo"
 
 ## Custom multiple select
 <Demo.DemoCustomMutipleSelect usePortal={false} />
-</div> 
+</div>  */}
 
 
