--- a/app/spinner/page.mdx
+++ b/app/spinner/page.mdx
@@ -10,7 +10,7 @@ import {DemoVariantsSpinner, DemoSizeSpinner} from "./Demo"
 <DemoSizeSpinner variant="sunburst"/>
 
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 <DemoVariantsSpinner/>
@@ -20,4 +20,4 @@ import {DemoVariantsSpinner, DemoSizeSpinner} from "./Demo"
 <DemoSizeSpinner variant="dotted"/>
 
 <DemoSizeSpinner variant="sunburst"/>
-</div>
+</div> */}
