--- a/app/switch/page.mdx
+++ b/app/switch/page.mdx
@@ -10,7 +10,7 @@ import * as Demo from "./Demo"
 <Demo.DemoIconSwitch disabled/>
 
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Basic
@@ -21,4 +21,4 @@ import * as Demo from "./Demo"
 
 ## Disabled
 <Demo.DemoIconSwitch disabled/>
-</div>
+</div> */}
