--- a/app/checkbox/page.mdx
+++ b/app/checkbox/page.mdx
@@ -8,7 +8,7 @@ import * as Demo from './Demo'
 
 
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 <Demo.DemoBasicCheckbox/>
@@ -16,4 +16,4 @@ import * as Demo from './Demo'
 <Demo.DemoGroupCheckbox/>
 
 <Demo.DemoNestedCheckbox/>
-</div>
+</div> */}
