--- a/app/tabs/page.mdx
+++ b/app/tabs/page.mdx
@@ -7,17 +7,17 @@ import {DemoTabs, DemoAccentTabs, DemoTabsWithChildren} from "./Demo"
 
 ## Alternative
 
-<div className="bg-gray-25 p-4 rounded-md flex flex-col gap-4">
+<div className="bg-[var(--background-alternative)] p-4 rounded-md flex flex-col gap-4">
 ## Basic
 <DemoTabs theme="alternative"/>
 <DemoAccentTabs theme="alternative"/>
 </div>
 
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Basic
 <DemoTabs/>
 <DemoAccentTabs/>
-</div>
+</div> */}
