--- a/app/text-input/page.mdx
+++ b/app/text-input/page.mdx
@@ -64,7 +64,7 @@ import { Box } from 'lucide-react';
 
 ## Alternative
 
-<div className="bg-gray-25 p-4 rounded-md flex flex-col gap-4">
+<div className="bg-[var(--background-alternative)] p-4 rounded-md flex flex-col gap-4">
 
 ## Basic
 
@@ -117,7 +117,7 @@ import { Box } from 'lucide-react';
 
 {/* /////////////////////////////////////////////////////////////////////////////////////// */}
 
-## Dark mode
+{/* ## Dark mode
 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 
@@ -165,4 +165,4 @@ import { Box } from 'lucide-react';
 <DemoBasicInput isClearable readOnly floatingLabel='Floating Label' placeholder='Placeholder' value='Text' />
 <DemoBasicInput isClearable readOnly floatingLabel='Floating Label' placeholder='Placeholder' value='Text' leftIcon={<Box />}/>
 
-</div>
+</div> */}
