--- a/app/tooltip/page.mdx
+++ b/app/tooltip/page.mdx
@@ -11,6 +11,7 @@ import * as TooltipDemo from "./Demo"
 ## Toggle and Delay
 <TooltipDemo.DemoOutlinedTooltip delay={1000} isToggle touchDelay={1000}/>
 
+{/* 
 <div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
 ## Hover and Focus
 <TooltipDemo.DemoOutlinedTooltip data-scheme="dark"/>
@@ -21,4 +22,4 @@ import * as TooltipDemo from "./Demo"
 
 ## Toggle and Delay
 <TooltipDemo.DemoOutlinedTooltip data-scheme="dark" delay={1000} isToggle/>
-</div>
+</div> */}
